2003-11-25  John Dallaway  <jld@ecoscentric.com>

	* src/fconfig.c (load_flash_config):
	Fix typo in output string.

2003-11-24  Gary Thomas  <gary@mlbassoc.com>

	* src/net/bootp.c (__bootp_find_local_ip): 
	Suppress diagnostic message that DNS info found.

2002-11-24  Jani Monoses  <jani@iv.ro>

	* src/flash.c: Remove references to FLASH_MIN_WORKSPACE.
	
2002-11-20  Jani Monoses  <jani@iv.ro>

	* src/flash.c: flash_init() no longer takes three args.

2003-11-19  David Woodhouse  <dwmw2@redhat.com>
 
 	* src/main.c: Restore correct old baud rate if changing fails.
 
2003-11-13  Gary Thomas  <gary@mlbassoc.com>

	* src/main.c (do_go): Need to stop catching exceptions when running a
	user program, otherwise GDB will never run when the program fails, gets
	a ^C interrupt, etc.  Also, clean up [remove] some cache debug code.

2003-11-12  Gary Thomas  <gary@mlbassoc.com>

	* misc/redboot_XXX.ecm: Removed - since it was only a source of confusion.

2003-11-07  Gary Thomas  <gary@mlbassoc.com>

	* src/net/dns.c: 
	* src/net/bootp.c: 
	* include/net/net.h: Use DNS server address from DHCP if provided.
	Inspired by John Newlin <jnewlin@rawbw.com>

	* src/flash.c (fis_init): Take out misleading warning - since the
	new [default] behaviour of "fis free" means free space need not
	be necessarily erased on the device.

2003-11-04  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c (find_free): Better handling of end address - otherwise
	list of free blocks could be incorrect.  Thanks to Chris Garry.

2003-11-01  Gary Thomas  <gary@mlbassoc.com>

	* cdl/redboot.cdl: Reorg to allow disk operations on other than
	IDE drives.

2003-10-23  Gary Thomas  <gary@mlbassoc.com>

	* src/main.c (cyg_start): Try to catch illegal memory accesses and
	other abort conditions during command execution.

2003-10-17  Gary Thomas  <gary@mlbassoc.com>

	* src/load.c: Only examine loadable segments when scanning to determine
	lowest loadable address (only used when -b XXX option used).  Otherwise,